// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-iwostn-0 kgQvMP"
  >
    <div
      class="ant-design-pro ant-pro-basicLayout screen-md ant-pro-basicLayout-side"
    >
      <section
        class="ant-layout ant-layout-has-sider"
        style="min-height: 100%;"
      >
        <aside
          class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-layout-side"
          style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
        >
          <div
            class="ant-layout-sider-children"
          >
            <div
              class="ant-pro-sider-logo"
              id="logo"
            >
              <div />
            </div>
            <div
              style="flex: 1; overflow-y: auto; overflow-x: hidden;"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light"
                data-menu-list="true"
                role="menu"
                tabindex="0"
              >
                <li
                  class="ant-menu-item ant-menu-item-only-child menu-active"
                  data-menu-id="rc-menu-uuid-test--dashboard"
                  role="menuitem"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      data-label="Dashboard"
                      href="/undefined/t/dashboard"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="SpeedIndicatorSolid"
                        />
                      </span>
                      Dashboard
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--ai_assurance-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--ai_assurance"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="AIOutlined"
                        />
                      </span>
                      AI Assurance
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  data-menu-id="rc-menu-uuid-test--venues"
                  role="menuitem"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      data-label="Venues"
                      href="/undefined/t/venues"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="LocationOutlined"
                        />
                      </span>
                      Venues
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--clients-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--clients"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="AccountCircleOutlined"
                        />
                      </span>
                      Clients
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--wi_fi-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--wi_fi"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="WiFi"
                        />
                      </span>
                      Wi-Fi
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--wired-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--wired"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="SwitchOutlined"
                        />
                      </span>
                      Wired
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--network_control-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--network_control"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="ServicesOutlined"
                        />
                      </span>
                      Network Control
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--business_insights-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--business_insights"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="BulbOutlined"
                        />
                      </span>
                      Business Insights
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--administration-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--administration"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="AdminOutlined"
                        />
                      </span>
                      Administration
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
            <div
              class="ant-pro-sider-links"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark ant-pro-sider-link-menu"
                data-menu-list="true"
                role="menu"
                tabindex="0"
              >
                <li
                  class="ant-menu-item ant-pro-sider-collapsed-button"
                  data-menu-id="rc-menu-uuid-test-collapsed"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <svg
                      class="styledComponents__Arrow-sc-iwostn-6 bfzBym"
                      data-testid="ArrowChevronLeft"
                    />
                    <div
                      class="styledComponents__CollapseText-sc-iwostn-8 fvDRIg ant-pro-menu-item-title"
                    >
                      Collapse
                    </div>
                  </span>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
          </div>
        </aside>
        <div
          class="ant-layout"
          style="position: relative;"
        >
          <header
            class="ant-layout-header"
            style="height: 48px; line-height: 48px; background: transparent;"
          />
          <header
            class="ant-layout-header ant-pro-fixed-header ant-pro-fixed-header-action ant-pro-header-dark"
            style="padding: 0px; height: 48px; line-height: 48px; width: calc(100% - 208px); z-index: 19; right: 0px;"
          >
            <div
              class="ant-pro-global-header ant-pro-global-header-layout-side"
            >
              <div
                style="flex: 1;"
              >
                <div
                  class="styledComponents__LeftHeaderContentWrapper-sc-iwostn-4 dcnnLs"
                >
                  <span
                    class="styledComponents__DropdownText-sc-iwostn-11 iEmwpR"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                      >
                        Left header
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </header>
          <main
            class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
          >
            <div
              class="styledComponents__ResponsiveContent-sc-iwostn-3 gEJLSl"
            >
              <div
                class="styledComponents__SpaceAlignContainer-sc-vgyaa0-0 gyShKo"
              >
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                >
                  <h2>
                    Hey, you are missing the bigger picture
                  </h2>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  style="margin-top: 15px;"
                >
                  <h3>
                    The screen width seems to be too low
                  </h3>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                >
                  <h3>
                    (minimal supported width is 1280px)
                  </h3>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  style="margin-top: 15px;"
                >
                  <p>
                    For optimal display of RUCKUS One, please use one of the following methods:
                  </p>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="MagnifyingGlassMinusOutlined"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Zoom Out
                    </strong>
                  </span>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="ArrowsOut"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Resize browser window
                    </strong>
                  </span>
                  <p>
                    to at least 1280 pixels width
                  </p>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="DesktopOutlined"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Change screen resolution
                    </strong>
                  </span>
                  <p>
                    to 1280*X or higher
                  </p>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="RotateMobileOutlined"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Rotate your device
                    </strong>
                  </span>
                  <p>
                    to landscape orientation
                  </p>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  style="margin-top: 30px;"
                >
                  <a
                    class="ant-typography"
                    data-testid="subOptimalButton"
                  >
                    <p>
                      Let me continue with sub-optimal display
                    </p>
                  </a>
                </div>
              </div>
            </div>
          </main>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout should render with custom tenant type correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-iwostn-0 kgQvMP"
  >
    <div
      class="ant-design-pro ant-pro-basicLayout screen-md ant-pro-basicLayout-side"
    >
      <section
        class="ant-layout ant-layout-has-sider"
        style="min-height: 100%;"
      >
        <aside
          class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-layout-side"
          style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
        >
          <div
            class="ant-layout-sider-children"
          >
            <div
              class="ant-pro-sider-logo"
              id="logo"
            >
              <div />
            </div>
            <div
              style="flex: 1; overflow-y: auto; overflow-x: hidden;"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light"
                data-menu-list="true"
                role="menu"
                tabindex="0"
              >
                <li
                  class="ant-menu-submenu ant-menu-submenu-vertical"
                  role="none"
                >
                  <div
                    aria-controls="rc-menu-uuid-test--my_customers-popup"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    data-menu-id="rc-menu-uuid-test--my_customers"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-1 ccvYDe"
                      >
                        <svg
                          data-testid="SpeedIndicatorOutlined"
                        />
                      </span>
                      My Customers
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
            <div
              class="ant-pro-sider-links"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark ant-pro-sider-link-menu"
                data-menu-list="true"
                role="menu"
                tabindex="0"
              >
                <li
                  class="ant-menu-item ant-pro-sider-collapsed-button"
                  data-menu-id="rc-menu-uuid-test-collapsed"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <svg
                      class="styledComponents__Arrow-sc-iwostn-6 bfzBym"
                      data-testid="ArrowChevronLeft"
                    />
                    <div
                      class="styledComponents__CollapseText-sc-iwostn-8 fvDRIg ant-pro-menu-item-title"
                    >
                      Collapse
                    </div>
                  </span>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
          </div>
        </aside>
        <div
          class="ant-layout"
          style="position: relative;"
        >
          <header
            class="ant-layout-header"
            style="height: 48px; line-height: 48px; background: transparent;"
          />
          <header
            class="ant-layout-header ant-pro-fixed-header ant-pro-fixed-header-action ant-pro-header-dark"
            style="padding: 0px; height: 48px; line-height: 48px; width: calc(100% - 208px); z-index: 19; right: 0px;"
          >
            <div
              class="ant-pro-global-header ant-pro-global-header-layout-side"
            >
              <div
                style="flex: 1;"
              >
                <div
                  class="styledComponents__LeftHeaderContentWrapper-sc-iwostn-4 dcnnLs"
                >
                  <div>
                    Left header
                  </div>
                </div>
              </div>
            </div>
          </header>
          <main
            class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
          >
            <div
              class="styledComponents__ResponsiveContent-sc-iwostn-3 gEJLSl"
            >
              <div
                class="styledComponents__SpaceAlignContainer-sc-vgyaa0-0 gyShKo"
              >
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                >
                  <h2>
                    Hey, you are missing the bigger picture
                  </h2>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  style="margin-top: 15px;"
                >
                  <h3>
                    The screen width seems to be too low
                  </h3>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                >
                  <h3>
                    (minimal supported width is 1280px)
                  </h3>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  style="margin-top: 15px;"
                >
                  <p>
                    For optimal display of RUCKUS One, please use one of the following methods:
                  </p>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="MagnifyingGlassMinusOutlined"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Zoom Out
                    </strong>
                  </span>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="ArrowsOut"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Resize browser window
                    </strong>
                  </span>
                  <p>
                    to at least 1280 pixels width
                  </p>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="DesktopOutlined"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Change screen resolution
                    </strong>
                  </span>
                  <p>
                    to 1280*X or higher
                  </p>
                </div>
                <div
                  class="styledComponents__SpaceAlignBlock-sc-vgyaa0-1 gotgWc"
                >
                  <div
                    class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  >
                    <svg
                      data-testid="RotateMobileOutlined"
                    />
                  </div>
                  <span
                    class="ant-typography"
                  >
                    <strong>
                      Rotate your device
                    </strong>
                  </span>
                  <p>
                    to landscape orientation
                  </p>
                </div>
                <div
                  class="styledComponents__Description-sc-vgyaa0-2 ldCssJ"
                  style="margin-top: 30px;"
                >
                  <a
                    class="ant-typography"
                    data-testid="subOptimalButton"
                  >
                    <p>
                      Let me continue with sub-optimal display
                    </p>
                  </a>
                </div>
              </div>
            </div>
          </main>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
